# BlenderToolbox

./: .gitignore  README.md  default_mesh.py  default_mesh_numpy.py  default_point_cloud.py  default_point_cloud_numpy.py  demo_VColor.py  demo_coralRed.py  demo_derekBlue.py  demo_edge.py  demo_facePointCloud.py  demo_facePoints.py  demo_iglGreen.py  demo_pointCloud.py  demo_pureColor.py  demo_realValue.py  demo_singleColor.py  demo_vertPointCloud.py  demo_vertexColor.py  demo_vertexPoints.py  include.py  invisibleGround.py  pyproject.toml  readOBJ.py  readPLY.py  setLight_sun.py  setMat_VColor.py  setup.py  subdivision.py  template.py  template_lazy.py  template_numpy.py  template_pointCloud.py  template_pointCloud_numpy.py  test.blend1  upload_to_pypi.sh
BlenderToolBox/: __init__.py  blenderInit.py  colorMap.py  copyToVertexSubset.py  createArrow.py  createVectorFieldMesh.py  drawBoundaryLoop.py  drawEdgeSubset.py  drawSphere.py  genPolylineMesh.py  invisibleGround.py  readMesh.py  readNumpyMesh.py  readNumpyPoints.py  readPLY.py  render_mesh_default.py  setMat_VColor.py  setMat_balloon.py  setMat_edge.py  setMat_edgeWithTexture.py  setMat_emission.py  setMat_metal.py  setMat_monotone.py  setMat_muscle.py  setMat_plastic.py  setMat_pointCloud.py  setMat_pointCloudColored.py  setMat_poop.py  setMat_singleColor.py  setMat_texture.py  setMat_transparent.py  setMeshScalars.py  setPointColors.py  setPointScalars.py
blendertoolbox/: __init__.py  blenderInit.py  colorMap.py  colorObj.py  createScaledVectorFieldMesh.py  discreteColor.py  drawBoundaryLoop.py  drawEdgeSubset.py  drawLines.py  drawOutline.py  edgeNormals.py  import_scene_from_blend.py  invisibleGround.py  loadShader.py  readImagePlane.py  readMesh.py  readNumpyMesh.py  readOBJ.py  readPLY.py  readSimplicialComplex.py  renderAnimation.py  render_mesh_default.py  render_point_cloud_default.py  setCameraPath.py  setCamera_from_UI.py  setCamera_orthographic.py  setGraphMaterial.py  setGraphMesh.py  setLight_ambient.py  setLight_sun.py  setLight_threePoints.py  setMat_VColorAO.py  setMat_ambient_occlusion.py  setMat_chrome.py  setMat_crackedCeramic.py  setMat_edge.py  setMat_glass.py  setMat_graph.py  setMat_honey.py  setMat_matcap.py  (+13 more)
blendertoolbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cycles/: demo_amber.py  demo_balloon.py  demo_boundaryLoop.py  demo_carPaint.py  demo_ceramic.py  demo_chrome.py  demo_circCamera.py  demo_composite.py  demo_crackedCeramic.py  demo_drawLines.py  (+40 more)
(+144 files in other folders)
